--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,16 @@ matrix:
 
 # command to install dependencies
 install:
-    - pip install numpy scipy nose cython qutip
+    - wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh;
+    - bash miniconda.sh -b -p $HOME/miniconda
+    - export PATH="$HOME/miniconda/bin:$PATH"
+    - hash -r
+    - conda config --set always_yes yes --set changeps1 no
+    - conda info -a
+    - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION
+    - source activate test-environment
+    - conda install mkl numpy scipy nose cython
+    - conda install qutip
     - pip install coverage coveralls
     - python setup.py install;
  
