--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ install:
     - conda info -a
     - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION
     - source activate test-environment
-    - conda install mkl numpy scipy nose cython
+    - conda install numpy scipy nose cython
     - conda install qutip
     - pip install coverage coveralls
     - python setup.py install;
