--- a/.travis.yml
+++ b/.travis.yml
@@ -1,27 +1,11 @@
-sudo: required
-dist: trusty
 language: python
+  python:
+    - "3.6"
 
-matrix:
-    include:
-        - python: 3.6
-          env: CC=clang CXX=clang++
-
-# command to install dependencies
 install:
-    - wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh;
-    - bash miniconda.sh -b -p $HOME/miniconda
-    - export PATH="$HOME/miniconda/bin:$PATH"
-    - hash -r
-    - conda config --set always_yes yes --set changeps1 no
-    - conda info -a
-    - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION
-    - source activate test-environment
-    - conda install numpy scipy nose cython
-    - conda install qutip
-    - pip install coverage coveralls
-    - python setup.py install;
- 
+  - pip install -r requirements.txt
+  - python setup.py install
+
 # command to run tests
 script: 
     - nosetests --verbosity=2
