--- a/.travis.yml
+++ b/.travis.yml
@@ -1,47 +1,39 @@
+sudo: required
+dist: trusty
 language: python
-  python:
-    - "3.6"
 
-addons:
-  apt:
-    sources:
-    - ubuntu-toolchain-r-test
-    packages:
-    - gcc-4.8
-    - g++-4.8
+matrix:
+    include:
+        - python: 3.6
+        - python: 3.6
+          env: CC=clang CXX=clang++
 
-before_install:
-  - if [[ "$TRAVIS_PYTHON_VERSION" == "2.7" ]]; then
-      wget https://repo.continuum.io/miniconda/Miniconda2-latest-Linux-x86_64.sh -O miniconda.sh;
-    else
-      wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh;
-    fi
-  - bash miniconda.sh -b -p $HOME/miniconda
-  - export PATH="$HOME/miniconda/bin:$PATH"
-  - hash -r
-  - conda config --set always_yes yes --set changeps1 no
-  - conda update -q conda
-  - conda info -a
-
+# command to install dependencies
 install:
-  # Issues have been encountered with installing numpy and scipy on 
-  # Travis CI e.g. https://gist.github.com/dan-blanchard/7045057.
-  # Miniconda is recommended as the way to install these. See also:
-  # http://conda.pydata.org/docs/travis.html
-  # The following adopts approaches suggested in the above links.
-  - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION
-  - source activate test-environment
-  # recipy setup.py fails to install flask for as-yet-unknown reason,
-  # and fails if it is not present, so install it explicitly.
-  - conda install cython
-  - conda install numpy scipy qutip
-  - python setup.py install
-  - which python
-  - which pip
-  - which py.test
-  - py.test --version
-  - pip freeze
+    - wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh;
+    - bash miniconda.sh -b -p $HOME/miniconda
+    - export PATH="$HOME/miniconda/bin:$PATH"
+    - hash -r
+    - conda config --set always_yes yes --set changeps1 no
+    #- conda update -q conda
+    - conda info -a
+    - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION
+    - source activate test-environment
+    - conda install numpy scipy nose cython;
+    - pip install coverage coveralls
+    # Also get optional dependencies (CVXPY, which depends on CVXOPT and SCS).
+    # Finally, install ourselves.
+    - python setup.py install;
 
+# change dir
+before_script:
+    - mkdir piqs_testing
+    - cd piqs_testing
+ 
 # command to run tests
 script: 
-    - nosetests --verbosity=2
+    - python -m piqs.about
+    - nosetests --verbosity=2 --with-coverage --cover-package=piqs piqs
+
+after_success:
+    - coveralls
