--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,8 @@ install:
     - conda info -a
     - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION
     - source activate test-environment
-    - conda install numpy scipy nose cython;
+    - conda install numpy scipy nose cython
+    - conda install qutip
     - pip install coverage coveralls
     # Also get optional dependencies (CVXPY, which depends on CVXOPT and SCS).
     # Finally, install ourselves.
