--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,7 @@ before_install:
   - conda info -a
   - conda config --add channels conda-forge
   - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION cython numpy scipy qutip
+  - pip install coverage coveralls
 
 install:
   - source activate test-environment
