--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ before_install:
   # Useful for debugging any issues with conda
   - conda info -a
   - conda config --add channels conda-forge
-  - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION cython numpy scipy qutip
+  - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION cython numpy scipy qutip nose
   - pip install coverage coveralls
 
 install:
