--- a/environment.yml
+++ b/environment.yml
@@ -2,7 +2,6 @@ name: piqs_environment
 
 dependencies:
   - python=3.6
-  - numpy
-  - cython
-  - scipy
-  - qutip
+  - cython>=0.21
+  - numpy>=1.8
+  - scipy>=0.15
