--- a/meta.yaml
+++ b/meta.yaml
@@ -1,25 +1,65 @@
+# Note: there are many handy hints in comments in this example -- remove them when you've finalized your recipe
+
+# Jinja variables help maintain the recipe as you'll update the version only here.
+{% set name = "piqs" %}
+{% set version = "1.2.0" %}
+{% set sha256 = "13c814410228d598dddc28f842ddbea2429f821f059a8ef1695731abb02afffd" %}
+# sha256 is the prefered checksum -- you can get it for a file with:
+#  `openssl sha256 <file name>`.
+# You may need the openssl package, available on conda-forge
+#  `conda install openssl -c conda-forge``
+
 package:
-  name: piqs
-  version: "1.1"
+  name: {{ name|lower }}
+  version: {{ version }}
 
 source:
-  git_rev: v0.1.1
-  git_url: https://github.com/nathanshammah/piqs.git
+  url: https://github.com/nathanshammah/piqs/archive/{{ version }}.tar.gz
+  sha256: {{ sha256 }}
+
+build:
+  # Uncomment the following line if the package is pure python and the recipe is exactly the same for all platforms.
+  # It is okay if the dependencies are not built for all platforms/versions, although selectors are still not allowed.
+  # See https://conda-forge.org/docs/meta.html#building-noarch-packages for more details.
+  # noarch: python
+  number: 0
+  # If the installation is complex, or different between Unix and Windows, use separate bld.bat and build.sh files instead of this key.
+  # By default, the package will be built for the Python versions supported by conda-forge and for all major OSs.
+  # Add the line "skip: True  # [py<35]" (for example) to limit to Python 3.5 and newer, or "skip: True  # [not win]" to limit to Windows.
+  script: python -m pip install --no-deps --ignore-installed .
 
 requirements:
   build:
-    - python
+    - python>=3
     - setuptools
-    - numpy
-    - cython
+    - numpy>=1.8
+    - cython>=0.21
+
   run:
-    - python
-    - numpy
-    - cython
-    - scipy
-    - qutip
+    - python>=3
+    - numpy>=1.8
+    - cython>=0.21
+    - scipy>=0.15
+    - qutip>=4.2
+
+test:
+ imports:
+   - piqs
+   - piqs.tests
 
 about:
   home: https://github.com/nathanshammah/piqs
   license: BSD
   license_file: LICENSE
+  summary: 'Efficient numerical simulation of Lindblad dynamics using permutational invariance'
+
+  # The remaining entries in this section are optional, but recommended
+  doc_url: http://piqs.readthedocs.io/
+  dev_url: https://github.com/nathanshammah/piqs
+
+extra:
+  recipe-maintainers:
+    # GitHub IDs for maintainers of the recipe.
+    # Always check with the people listed below if they are OK becoming maintainers of the recipe. (There will be spam!)
+    - sahmed95
+    - nathanshammah
