--- a/environment.yml
+++ b/environment.yml
@@ -4,9 +4,7 @@ channels:
   - conda-forge
 
 dependencies:
-  - python=3.6
-  - cython>=0.21
-  - numpy>=1.8
-  - scipy>=0.15
-  - qutip>=4.2
-  - piqs
+  - cython
+  - numpy
+  - scipy
+  - qutip
